syntax = "proto3";

option csharp_namespace = "FileManagement.Grpc";


package file_manager;

service FileManager {
    // File CRUD Operations
    rpc UploadImage (stream UploadImageRequest) returns (UploadImageResponse);
    rpc UploadFile (stream UploadFileRequest) returns (UploadFileResponse);
    rpc GetDownloadLink (GetDownloadLinkRequest) returns (GetDownloadLinkResponse);
    rpc DeleteFile (DeleteRequest) returns (DeleteResponse);
}

message UploadImageRequest {
    bytes chunk = 1;
    string sourceService = 2;
    string contentType = 3;
    string fileName = 4;
}

message UploadImageResponse {
    string fileId = 1;
}

message UploadFileRequest {
    bytes chunk = 1;
    string sourceService = 2;
    string contentType = 3;
    string fileName = 4;
}

message UploadFileResponse {
    string fileId = 1;
}

message GetDownloadLinkRequest {
    string fileId = 1;
    string sourceService = 2;
    int32 expirySeconds = 3;
}

message GetDownloadLinkResponse {
    string link = 1;
}

message DeleteRequest {
    string fileId = 1;
    string sourceService = 2;
}

message DeleteResponse {
    bool isSuccess = 1;
}